# cowbells

./: .gitignore  CMakeLists.txt  README  README.org  worch.cfg
WCSim_Vis/: MCEvent.cc  MCEvent.h  Makefile  README  WCMapDict.cc  WCMapDict.h  WCMapLinkDef.h  WCSim_Draw.cc  WCSim_Draw.h  event_display.C
WCSim_WbLS/: CMakeLists.txt  GNUmakefile  README  WCSim_WbLS.cc  tuning_parameters.mac  vis.mac
WCSim_WbLS/example_mac_scripts/: novis.mac  viewDet.mac  viewlc.mac  viewwls.mac  viewwlsp.mac
WCSim_WbLS/example_root_scripts/.svn/: all-wcprops  entries
WCSim_WbLS/genfiles/: geofile.txt
WCSim_WbLS/include/: WCSimRootGeom.hh  WCSimTuningMessenger.hh  WCSimTuningParameters.hh
WCSim_WbLS/include/.svn/: all-wcprops  entries
WCSim_WbLS/others/: LC_README
WCSim_WbLS/src/: .root_hist  WCSimConstructMaterials.cc  WCSimPhysicsList.cc  WCSimRootDict.cc  WCSimRootDict.h  WCSimTuningMessenger.cc  WCSimTuningParameters.cc  WCSimWCSD.cc
WCSim_WbLS/src/.svn/: all-wcprops  entries
ana/aqua/: aqua.cfg
ana/magic/: histat.org  histat.py  histo.py  hists.py  hits.org  hits.py  magic.py  magic.tex  presentation.tex  refl.org  refl.py  reflection.org  reflections.py  steps.org  steps.py  util.py
ana/tubs/: run.sh  tubs.py
dict/: cowbell_linkdef.h  selection.h  selection.xml
doc/: grinst.org  style.css  worch.org
doc/presentation/: presentation.tex
doc/sphinx/: Makefile  api.rst  build.sh  conf.py  index.rst  intro.rst
inc/Cowbells/: DataRecorder.h  DetectorConstruction.h  Event.h  EventAction.h  Hit.h  Json2G4.h  PhysicsConsMuon.h  PhysicsList.h  PrimaryGeneratorBeam.h  PrimaryGeneratorFile.h  PrimaryGeneratorGun.h  PrimaryGeneratorUtil.h  R2G4.h  SensitiveDetector.h  TestRunAction.h  TestStackingAction.h  TrackInformation.h  TrackingAction.h  TreeMaker.h  strutil.h
main/: cmdline.h  cowbells.cc  test_cowbells_main.cc
people/bv/: README.org  build.sh  inst.sh
people/bv/cowbells/: CMakeLists.txt  README.org
people/bv/cowbells/ana/: punch.py
people/bv/cowbells/ana/dedx/: dedx.tex
people/bv/cowbells/dict/: cowbell_linkdef.h  selection.h  selection.xml
people/bv/cowbells/doc/: cowbells.org
people/bv/cowbells/inc/: CowMCapp.h  CowPatty.h  units.h
people/bv/cowbells/inc/Cowbells/: BuildByHand.h  BuildFromGdml.h  BuildFromJson.h  BuildFromRoot.h  DataRecorder.h  DetConsBase.h  Event.h  Hit.h  Interface.h  Json2G4.h  JsonUtil.h  PhysicsConsEM.h  PhysicsConsGeneral.h  PhysicsConsMuon.h  PhysicsConsOp.h  PhysicsList.h  PrimaryGenerator.h  PrimaryGeneratorBeam.h  RunAction.h  SensitiveDetector.h  StackingAction.h  SteppingAction.h  TestCB.h  TestDetectorConstruction.h  TestMain.h  TestPhysicsList.h  TestPrimaryGeneratorAction.h  TestSteppingVerbose.h  Util.h  strutil.h
people/bv/cowbells/main/: cmdline.h  cowbells.cc  json2g4.cc
people/bv/cowbells/python/cowbells/: __init__.py  app.py  boot.py  default.py  geo.py  geom.py  tubdet.py  units.py  world.py
people/bv/cowbells/python/cowbells/ana/: __init__.py  bethe.py  cbdedx.py  dedx.py  plot_dedx.py
people/bv/cowbells/python/cowbells/ana/pstar/: aluminum.txt  liquidwater.txt  plasticscint.txt  toluene.txt
people/bv/cowbells/python/cowbells/builder/: base.py  beamwindow.py  nsrl.py  triggercounter.py  tubdet.py  world.py
people/bv/cowbells/python/cowbells/default/: __init__.py  scintillator.py  teflon.py  water.py  wbls.py
people/bv/cowbells/python/cowbells/geom/: __init__.py  base.py  elements.py  materials.py  optical.py  placements.py  volumes.py
people/bv/cowbells/python/cowbells/material/: __init__.py  util.py  water.py  wbls.py
people/bv/cowbells/python/cowbells/prep/: __init__.py  acrylic.py  air.py  aluminum.py  dump.py  gen.py  gennsrl.py  gentubdet.py  geometry.py  glass.py  materials.py  nsrl.py  properties.py  propfile.py  scintillator.py  surfaces.py  teflon.py  util.py  vacuum.py  water.py  wbls.py
people/bv/cowbells/share/: gen.sh  gentc.py  gentubdet.py  heprepvis.mac  kin.json  physics.json
people/bv/cowbells/src/: CowMCapp.cxx  CowPatty.cxx  Ex06DetectorConstruction.cxx  Ex06PrimaryGenerator.cxx
people/bv/cowbells/src/Cowbells/: BuildByHand.cc  BuildFromGdml.cc  BuildFromJson.cc  BuildFromRoot.cc  DataRecorder.cc  DetConsBase.cc  DetectorConstruction.cc  Event.cc  EventAction.cc  Hit.cc  Interface.cc  Json2G4.cc  JsonUtil.cc  PhysicsConsEM.cc  PhysicsConsGeneral.cc  PhysicsConsMuon.cc  PhysicsConsOp.cc  PhysicsList.cc  PrimaryGenerator.cc  PrimaryGeneratorBeam.cc  PrimaryGeneratorFile.cc  PrimaryGeneratorGun.cc  R2G4.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc  TestCB.cc  TestDetectorConstruction.cc  TestMain.cc  TestPrimaryGeneratorAction.cc  TestRunAction.cc  TestSteppingVerbose.cc  Util.cc  strutil.cc
people/bv/cowbells/src/json/: json_value.cpp
people/bv/cowbells/tests/: mat.json  opts.json  test_app.py  test_cb.py  test_cowbells.py  test_geom.py  test_graph.py  test_json_mat.cc  test_jsonutil.cc  test_strutil.cc  test_test.py  test_units.py  test_vmcgeom.py  test_water.py
people/bv/cowbells/tests/sample/: __init__.py
python/bv/: collections.py
python/cowbells/: __init__.py  boot.py  geo.py  units.py  utils.py
share/: cowbells-init.sh  cowbells-shell  dodo.py  gen-nsrl-histat.sh  gen-nsrl-reflections.sh  gen.sh  gengeo.sh  gennsrl.py  gentubdet.py  heprepvis.mac  kin.json  plotdedx.sh  setup-cowbells.sh
src/Cowbells/: BuildByHand.cc  DataRecorder.cc  Event.cc  EventAction.cc  Hit.cc  Json2G4.cc  JsonUtil.cc  PhysicsConsEM.cc  PhysicsConsMuon.cc  PhysicsConsOp.cc  PhysicsList.cc  PrimaryGeneratorBeam.cc  PrimaryGeneratorGun.cc  PrimaryGeneratorUtil.cc  R2G4.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc  TestDetectorConstruction.cc  TestPhysicsList.cc  TestStackingAction.cc  TrackInformation.cc  TrackingAction.cc  Util.cc  strutil.cc
tests/: mat.json  test_fit.C  test_fit.py  test_geom.py  test_hepmcio.cc  test_init.py  test_json.cc  test_json_units.cc  test_set_cons.py  test_strutil.cc  test_units.py  test_water.py  test_wf_detsim.py  test_wf_geogen.py  units.json
tests/sample/: __init__.py
(+149 files in other folders)
